--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The KEET</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <script defer src="./js/bootstrap.bundle.min.js"></script>
-    <script defer src="./js/main.js"></script>
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script defer src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script defer src="./assets/js/main.js"></script>
     <link
       rel="shortcut icon"
-      href="./img/logo_trans_blue 1.png"
+      href="./assets/img/logo_trans_blue 1.png"
       type="image/x-icon"
     />
     <link
@@ -31,7 +31,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="./css/swiperjs.css">
+    <link rel="stylesheet" href="./assets/css/swiperjs.css">
   </head>
 
   <body>
@@ -40,11 +40,11 @@
       <nav style="background-color: #0d0733; color: white">
         <div class="container-fluid d-flex justify-content-between py-3 px-5">
           <div>
-            <a href="#"><img src="./img/logo_trans_blue 1.png" alt="" class="img-fluid" /></a>
+            <a href="#"><img src="./assets/img/logo_trans_blue 1.png" alt="" class="img-fluid" /></a>
           </div>
           <div class="d-flex align-items-center gap-3 gap-md-5">
             <div class="d-none d-md-flex d-lg-flex d-xl-flex align-items-center gap-2">
-              <div><img src="./img/Ash box.png" class="img-fluid" alt="" /></div>
+              <div><img src="./assets/img/Ash box.png" class="img-fluid" alt="" /></div>
               <div class="username d-sm-none d-lg-block d-md-block d-xl-block">
                 <abbr title="GeborOfficial">
                   <div>Hi, GeborOffic...</div>
@@ -57,7 +57,7 @@
             <div class="bg-primary p-2 notif rounded">
               <abbr title="0 New Notification"><i class="fa-solid fa-bell" style="color: #ffffff"></i></abbr>
             </div>
-            <img src="./img/Group 30.png" id="hamburgerMenu" class="d-lg-none d-xl-none d-block hamburger img-fluid" alt="">
+            <img src="./assets/img/Group 30.png" id="hamburgerMenu" class="d-lg-none d-xl-none d-block hamburger img-fluid" alt="">
           </div>
         </div>
       </nav>
@@ -147,7 +147,7 @@
                 class="btn btn-primary d-flex align-items-center justify-content-center w-100"
               >
                 <img
-                  src="./img/Yandex Money (1).png"
+                  src="./assets/img/Yandex Money (1).png"
                   alt="Add Funds"
                   class="me-2"
                   style="width: 24px; height: 24px"
@@ -162,7 +162,7 @@
             <swiper-slide>
                 <div class="row mx-auto rounded shadow p-3">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <img src="./img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
+                        <img src="./assets/img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
                     </div>
                     <div class="col-9">
                         <div class="d-flex justify-content-between align-items-start">
@@ -179,7 +179,7 @@
             <swiper-slide>
                 <div class="row mx-auto rounded shadow p-3">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <img src="./assets/image/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
+                        <img src="./assets/img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
                     </div>
                     <div class="col-9">
                         <div class="d-flex justify-content-between align-items-start">
@@ -196,7 +196,7 @@
             <swiper-slide>
                 <div class="row mx-auto rounded shadow p-3">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <img src="./assets/image/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
+                        <img src="./assets/img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
                     </div>
                     <div class="col-9">
                         <div class="d-flex justify-content-between align-items-start">
@@ -213,7 +213,7 @@
             <swiper-slide>
                 <div class="row mx-auto rounded shadow p-3">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <img src="./assets/image/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
+                        <img src="./assets/img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
                     </div>
                     <div class="col-9">
                         <div class="d-flex justify-content-between align-items-start">
@@ -230,7 +230,7 @@
             <swiper-slide>
                 <div class="row mx-auto rounded shadow p-3">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <img src="./assets/image/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
+                        <img src="./assets/img/3225191_app_instagram_logo_media_popular_icon.png" alt="" class="w-100">
                     </div>
                     <div class="col-9">
                         <div class="d-flex justify-content-between align-items-start">
@@ -253,25 +253,25 @@
               <div class="row g-2">
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Twitter.png" alt="" />
+                    <img src="./assets/img/Twitter.png" alt="" />
                     <div class="fw-light fs-6">X (Twitter)</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Facebook.png" alt="" />
+                    <img src="./assets/img/Facebook.png" alt="" />
                     <div class="fw-light fs-6">Facebook</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Instagram.png" alt="" />
+                    <img src="./assets/img/Instagram.png" alt="" />
                     <div class="fw-light fs-6">Instagram</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Hamburger.png" alt="" />
+                    <img src="./assets/img/Hamburger.png" alt="" />
                     <div class="fw-light fs-6">All category</div>
                   </a>
                 </div>
@@ -279,25 +279,25 @@
               <div class="row g-2 pt-3">
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Twitter.png" alt="" />
+                    <img src="./assets/img/Twitter.png" alt="" />
                     <div class="fw-light fs-6">X (Twitter)</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Facebook.png" alt="" />
+                    <img src="./assets/img/Facebook.png" alt="" />
                     <div class="fw-light fs-6">Facebook</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Instagram.png" alt="" />
+                    <img src="./assets/img/Instagram.png" alt="" />
                     <div class="fw-light fs-6">Instagram</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Hamburger.png" alt="" />
+                    <img src="./assets/img/Hamburger.png" alt="" />
                     <div class="fw-light fs-6">All category</div>
                   </a>
                 </div>
@@ -312,25 +312,25 @@
               <div class="row g-2">
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Twitter.png" alt="" />
+                    <img src="./assets/img/Twitter.png" alt="" />
                     <div class="fw-light fs-6">X (Twitter)</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Facebook.png" alt="" />
+                    <img src="./assets/img/Facebook.png" alt="" />
                     <div class="fw-light fs-6">Facebook</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Instagram.png" alt="" />
+                    <img src="./assets/img/Instagram.png" alt="" />
                     <div class="fw-light fs-6">Instagram</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Hamburger.png" alt="" />
+                    <img src="./assets/img/Hamburger.png" alt="" />
                     <div class="fw-light fs-6">All category</div>
                   </a>
                 </div>
@@ -345,25 +345,25 @@
               <div class="row g-2">
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Twitter.png" alt="" />
+                    <img src="./assets/img/Twitter.png" alt="" />
                     <div class="fw-light fs-6">X (Twitter)</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Facebook.png" alt="" />
+                    <img src="./assets/img/Facebook.png" alt="" />
                     <div class="fw-light fs-6">Facebook</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Instagram.png" alt="" />
+                    <img src="./assets/img/Instagram.png" alt="" />
                     <div class="fw-light fs-6">Instagram</div>
                   </a>
                 </div>
                 <div class="col-6 col-md-3 text-center">
                   <a href="#">
-                    <img src="./img/Hamburger.png" alt="" />
+                    <img src="./assets/img/Hamburger.png" alt="" />
                     <div class="fw-light fs-6">All category</div>
                   </a>
                 </div>
@@ -380,7 +380,7 @@
         <div class="px-5">
           <div class="bg-warning w-100 mx-auto">
             <img
-              src="./img/launchad 1 (1).png"
+              src="./assets/img/launchad 1 (1).png"
               class="img-fluid"
               alt=""
               style="width: 100%;"
@@ -393,7 +393,7 @@
             style="background-color: #a5946a"
           >
               <div class="d-flex">
-                <img src="./img/MegaPhone.png" alt="" class="me-1" />
+                <img src="./assets/img/MegaPhone.png" alt="" class="me-1" />
                 <div>Buy your next social media account on our platform</div>
               </div>
               <a
@@ -436,9 +436,9 @@
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-    <script defer src="./js/bootstrap.bundle.min.js"></script>
-    <script defer src="./js/main.js"></script>
+    <script defer src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script defer src="./assets/js/main.js"></script>
 
-    <script src="./js/swiper.js"></script>
+    <script src="./assets/js/swiper.js"></script>
   </body>
 </html>
